<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/intro"
            android:textColor="#000000"
            android:textSize="20sp" />

        <!-- QUESTION 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_one" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_body" />

                <RadioGroup
                    android:id="@+id/question_one_radios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/question_one_radio_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_radio_one" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_radio_two" />

                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- QUESTION 2 -->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_two" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_body" />

                <RadioGroup
                    android:id="@+id/question_two_radios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two_radio_one" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two_radio_two" />

                    <RadioButton
                        android:id="@+id/question_two_radio_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two_radio_three" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two_radio_four" />

                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- QUESTION 3 -->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_three" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_body" />

                <EditText
                    android:id="@+id/area_question_answer"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_three_edit_area"
                    android:inputType="text" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- QUESTION 4-->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_four" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_four_body" />

                <RadioGroup
                    android:id="@+id/question_four_radios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_radio_one" />

                    <RadioButton
                        android:id="@+id/question_four_radio_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_radio_two" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_radio_three" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_radio_four" />
                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- QUESTION 5-->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view5"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_five" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five_body" />

                <CheckBox
                    android:id="@+id/question_five_check_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five_check_one" />

                <CheckBox
                    android:id="@+id/question_five_check_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five_check_two" />

                <CheckBox
                    android:id="@+id/question_five_check_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five_check_three" />

                <CheckBox
                    android:id="@+id/question_five_check_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five_check_four" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- QUESTION 6-->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view6"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_six" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_six_body" />

                <RadioGroup
                    android:id="@+id/question_six_radios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_six_radio_one" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_six_radio_two" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_six_radio_three" />

                    <RadioButton
                        android:id="@+id/question_six_radio_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_six_radio_four" />
                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- QUESTION 7-->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view7"
            style="@style/card_style">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_header_seven" />

                <TextView
                    style="@style/question_body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_seven_body" />

                <CheckBox
                    android:id="@+id/question_seven_check_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_seven_check_one" />

                <CheckBox
                    android:id="@+id/question_seven_check_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_seven_check_two" />

                <CheckBox
                    android:id="@+id/question_seven_check_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_seven_check_three" />

                <CheckBox
                    android:id="@+id/question_seven_check_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_seven_check_four" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn" />

    </LinearLayout>

</ScrollView>